--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: aRtwork
-Title: What the Package Does (One Line, Title Case)
+Title: A Repository of Artistic Visualisations Created with R
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Marcus",
+           family = "Volz",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "marcus.volz@outlook.com")
+Description: Each function generates data and stores it in a data frame suitable for plotting with ggplot2.
 License: What license it uses
+Imports: 
+  dplyr,
+  purrr,
+  tweenr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
